2007-09-14  Ulrich Tipp  <ulrich.tipp@hsnr.de>

	* miscellaneous/bincoeff.m: Fix calculation of bincoeff (n, k) for
	noninteger N with N-K < 1.

2007-08-04  Jean-Francois Cardoso  <cardoso@tsi.enst.fr>

	* strings/index.m: Correct for strings differing after the third
	position (bug reported by Maude Martin).

2007-09-13  John W. Eaton  <jwe@octave.org>

	* plot/__default_colormap__.m: Delete.
	* plot/Makefile (SOURCES): Remove from the list.

2007-09-13  Christof Zeile  <cz-oct07@cvmx.com>

	* pol2cart.m: Make it work with mixed scalar/nonscalar arguments.

2007-09-10  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Allow gnuplot 4.0 with patches, but
	limit the selection of colors in the same way as for lines.
	* plot/__patch__.m: Allow matrix arguments with one patch per
	column.
	* plot/__bar__.m: Adapt to use "patch".

2007-09-06  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m (drawnow): New arg, debug_file.
	(init_plot_stream): Split from open_plot_stream.
	* plot/print.m: Accept -debug=FILE argument.

2007-09-06  David Bateman  <dbateman@free.fr>

        * general/celldisp.m: New function.
        * general/Makefile.in (SOURCES): Add celldisp.m.
        * miscellaneous/swapbytes.m: New function.
        * miscellaneous/gzip.m: New function.
        * miscellaneous/Makefile.in (SOURCES): Add swapbytes.m and gzip.m.

2007-09-05  David Bateman  <dbateman@free.fr>

        * general/structfun.m: New function.
        * general/Makefile.in (SOURCES): Add it to sources.
        * miscellaneous/run.m: New function.
        * miscellaneous/Makefile.in (SOURCES): Add it to sources.
        * statistics/base/mode.m: New function.
        * statistics/base//Makefile.in (SOURCES): Add it to sources.

2007-09-05  John W. Eaton  <jwe@octave.org>

	* miscellaneous/orderfields.m: Use numel instead of length.

2007-09-05  Michael goffioul  <michael.goffioul@gmail.com>

	* miscellaneous/orderfields.m: Handle empty structs.
