@@ -1,3 +1,7 @@
+2007-09-17  John W. Eaton  <jwe@octave.org>
+
+	* plot/__go_draw_axes__.m: Omit linestyle clause for errorbar plots.
+
 2007-09-14  Ulrich Tipp  <ulrich.tipp@hsnr.de>
 
 	* miscellaneous/bincoeff.m: Fix calculation of bincoeff (n, k) for
